--- a/docs/mini-apps/troubleshooting/testing.mdx
+++ b/docs/mini-apps/troubleshooting/testing.mdx
@@ -50,7 +50,7 @@ Testing your mini app before launch ensures it functions correctly, displays pro
     **Steps:**
 
     1. Enable Developer Mode: **Open Base App > Privacy & Security > toggle Developer Mode**
-    2. Open preivew: **Settings > Developer > Preview** 
+    2. Open preview: **Settings > Developer > Preview** 
     3. Enter the URL of your mini app  
     4. Click `Preview` 
 
