Fix typos in files (#641)
* typo basename-transfer.mdx

* typo accept-payments.mdx

* typos introduction-to-mini-apps.mdx

* typos-fix successful-miniapps-in-tba.mdx

--- a/docs/base-account/guides/accept-payments.mdx
+++ b/docs/base-account/guides/accept-payments.mdx
@@ -133,7 +133,7 @@ export async function checkPayment(txId, testnet = false) {
     testnet  // Must match the testnet setting from the original pay() call
   });
   if (status.status === 'completed') {
-    // fulfil order
+    // fulfill order
   }
 }
 ```
