--- a/docs/cookbook/introduction-to-mini-apps.mdx
+++ b/docs/cookbook/introduction-to-mini-apps.mdx
@@ -5,9 +5,9 @@ description: Mini Apps represent a paradigm shift in application development and
 
 # Vibe Coding a Mini App
 
-In the following sections you will be guided through the best practices for vibe coding a mini app game starting with te fundamentals of prompting, what documentation to leverage, to deployment and posting.
+In the following sections you will be guided through the best practices for vibe coding a mini app game starting with the fundamentals of prompting, what documentation to leverage, to deployment and posting.
 
-Mini Apps are lightweight web applications that run across Farcaster clients like Farcaster and TBA. Posting your mini app and TBA will populate on Farcaster and visa versa
+Mini Apps are lightweight web applications that run across Farcaster clients like Farcaster and TBA. Posting your mini app and TBA will populate on Farcaster and vice versa
 
 # Introduction to Mini Apps
 
