--- a/docs/cookbook/successful-miniapps-in-tba.mdx
+++ b/docs/cookbook/successful-miniapps-in-tba.mdx
@@ -15,7 +15,7 @@ Mini Apps succeed when they create the smoothest possible user experience. **Min
 | Batched Transactions | Reduce interaction complexity     | Bundle related operations efficiently | Transaction completion rates |
 
 <Steps>
-  <Step title='Audit Connect Walet touchpoints'>
+  <Step title='Audit Connect Wallet touchpoints'>
     If you are using a custom wallet connection flow, you can replace it with
     MiniKit + Base Account.
   </Step>
@@ -24,11 +24,11 @@ Mini Apps succeed when they create the smoothest possible user experience. **Min
     align with Base UI patterns and speed up development.
   </Step>
   <Step title='Implement Paymaster'>
-    If you app requires a user to mint a NFT or submit a transaction onchain,
+    If your app requires a user to mint a NFT or submit a transaction onchain,
     ensure it is gasless by making that component interact with a Paymaster.
   </Step>
   <Step title='Use Batched Transactions'>
-    If you are using doing multiple transactions in a row, you can use batched
+    If you are doing multiple transactions in a row, you can use batched
     transactions to reduce the number of popups and approvals.
   </Step>
 </Steps>
