fix: Update 8021 docs to include info for wallet providers

--- a/docs/base-account/reference/core/capabilities/overview.mdx
+++ b/docs/base-account/reference/core/capabilities/overview.mdx
@@ -32,6 +32,7 @@ const baseCapabilities = capabilities["0x2105"]; // Base mainnet chain ID
 | [paymasterService](/base-account/reference/core/capabilities/paymasterService) | `wallet_sendCalls` | Gasless transactions |
 | [flowControl](/base-account/reference/core/capabilities/flowControl) | `wallet_sendCalls` | Flow control |
 | [datacallback](/base-account/reference/core/capabilities/datacallback) | `wallet_sendCalls` | Data callback |
+| [dataSuffix](/base-account/reference/core/capabilities/dataSuffix) | `wallet_sendCalls` | Transaction attribution |
 
 ## Using with wallet_connect
 
