Remove unnecessary comment

--- a/docs/base-account/reference/core/capabilities/dataSuffix.mdx
+++ b/docs/base-account/reference/core/capabilities/dataSuffix.mdx
@@ -35,7 +35,7 @@ const result = await provider.request({
   method: "wallet_sendCalls",
   params: [{
     version: "1.0",
-    chainId: "0x2105", // Base mainnet
+    chainId: "0x2105",
     from: userAddress,
     calls: [
       {
